--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "moment": "^2.24.0",
-    "prop-types": "^15.7.2",
+    "moment": "2.24.0",
+    "prop-types": "15.7.2",
     "react": "16.8.0",
     "react-dom": "16.8.0",
-    "react-moment": "^0.9.6"
+    "react-moment": "0.9.6",
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
